--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ display: block;
 		<td>
 			<img src="images/index_04.png" width="44" height="35" alt=""></td>
 		<td>
-			<a href="https://sodexo.ma/offres/form" target="_blank">
+			<a href="https://sodexo.ma/offres" target="_blank">
 				<img src="images/DemanderUnDevis.png" width="152" height="35" border="0" alt=""></a></td>
 		<td>
 			<img src="images/index_06.png" width="149" height="35" alt=""></td>
